--- a/main.css
+++ b/main.css
@@ -815,7 +815,7 @@ footer .footer--marge {
   font-weight: 700;
 }
 
-.palette__entry .palette__cards .palette--checkicon {
+.palette--checkicon {
   position: absolute;
   right: -3.8em;
   top: 0;
@@ -836,7 +836,7 @@ footer .footer--marge {
   transition: 1s;
 }
 
-.palette__entry .palette__cards .palette--checkicon i {
+.palette--checkicon i {
   color: white;
 }
 
@@ -1210,8 +1210,14 @@ footer .footer--marge {
   .palette__cards {
     width: 47em;
   }
-  .palette--checkicon .palette__cards .palette__entry {
+  .palette--checkicon {
     right: -5.8em;
+  }
+  .order__buton {
+    margin-left: 15em;
+  }
+  .start .logo {
+    left: 8em;
   }
 }
 /*# sourceMappingURL=main.css.map */
