--- a/main.scss
+++ b/main.scss
@@ -518,26 +518,25 @@ footer {
                 margin-right: 1.1em;
                 font-weight: 700;
             }
-        }
+        }   
+    }
+}
 
-        .palette--checkicon {
-            position: absolute;
-            right: -3.8em;
-            top: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            width: 12%;
-            border-radius: 0em 0.8em 0.8em 0;
-            background-color: #99e2d0;
-            transition: 1s;
+.palette--checkicon {
+    position: absolute;
+    right: -3.8em;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 12%;
+    border-radius: 0em 0.8em 0.8em 0;
+    background-color: #99e2d0;
+    transition: 1s;
 
-            & i {
-                color: white;
-            }
-        }
-        
+    & i {
+        color: white;
     }
 }
 
@@ -881,7 +880,15 @@ footer {
         width: 47em;
     }
 
-    .palette--checkicon .palette__cards .palette__entry {
+    .palette--checkicon {
         right: -5.8em;
+    }
+
+    .order__buton {
+        margin-left: 15em;
+    }
+
+    .start .logo {
+        left: 8em;
     }
 }
