--- a/main.css
+++ b/main.css
@@ -1094,7 +1094,7 @@ footer .footer--marge {
     width: 30em;
   }
   .palette--checkicon {
-    right: -3.5em;
+    right: -3.8em;
   }
 }
 
@@ -1104,6 +1104,46 @@ footer .footer--marge {
   }
   .palette__entry {
     margin-left: 5em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    margin: auto;
+  }
+  footer {
+    text-align: center;
+  }
+  .start {
+    margin-left: 12em;
+  }
+  .step {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .step__number {
+    width: 100%;
+  }
+  .composition--title {
+    margin-left: 12em;
+  }
+  .palette__entry {
+    margin-left: 10em;
+  }
+  .order__buton {
+    width: 25em;
+    margin-left: 2em;
+  }
+  .palette--checkicon {
+    right: -4.5em;
   }
 }
 
@@ -1156,6 +1196,12 @@ footer .footer--marge {
 }
 
 @media screen and (min-width: 801px) {
+  body {
+    margin: auto;
+  }
+  footer {
+    text-align: center;
+  }
   .step {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1202,10 +1248,10 @@ footer .footer--marge {
     left: 40.07em;
   }
   .composition--title {
-    margin-left: 6.5em;
+    margin-left: 12.5em;
   }
   .palette__entry {
-    margin-left: 1em;
+    margin-left: 2em;
   }
   .palette__cards {
     width: 47em;
@@ -1214,10 +1260,37 @@ footer .footer--marge {
     right: -5.8em;
   }
   .order__buton {
-    margin-left: 15em;
+    margin-left: 12.5em;
   }
-  .start .logo {
-    left: 8em;
+  .start {
+    left: 2em;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .palette__entry {
+    margin-left: 0em;
+  }
+  .palette__cards {
+    width: 100%;
+    margin: 0.5em;
+  }
+  .palette--checkicon {
+    right: -8.8em;
+    width: 8%;
+  }
+  .order__buton {
+    width: 100%;
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .composition--title {
+    margin-left: 25em;
+  }
+  .start {
+    margin-left: 32em;
   }
 }
 /*# sourceMappingURL=main.css.map */
